# llm-best-practice

./: .gitignore  404.html  README.md  README_ZH.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
GPU/env/: index.html
NPU/docker/: index.html
NPU/env/: index.html
NPU/faq/: index.html
NPU/intro/: index.html
NPU/llm/: index.html
NPU/llm+vnpu/: index.html
NPU/llm_parallel/: index.html
NPU/miniforge/: index.html
NPU/ocr/: index.html
NPU/vnpu/: index.html
Train/Pretrain/: index.html
Vector/meili/: index.html
Vector/milvus/: index.html
docs/: index.md
docs/NPU/: docker.md  env.md  faq.md  llm+vnpu.md  llm.md  llm_parallel.md  miniforge.md  ocr.md  vnpu.md
docs/Vector/: meili.md
search/: search_index.json
src/llm_best_practice/: __init__.py
