[project]
name = "llm-best-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wangxiangyu", email = "wang.xiangyu@coscoshipping.com" }
]
dependencies = ["mkdocs-material"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_best_practice"]

[tool.rye.scripts]
mkdocs = { cmd = "mkdocs serve --dev-addr=0.0.0.0:20000"}
build = { cmd = "mkdocs build "}